Completed Disciple of Mind Quest

--- a/silvestValley.html
+++ b/silvestValley.html
@@ -123,7 +123,7 @@
                             <a class="head" href="#theWisdomOfWizards">The Wisdom of Wizards</a>
                           </li>
                           <li>
-                            <a href="#">Disciple of Mind</a>
+                            <a href="#discipleOfMind">Disciple of Mind</a>
                           </li>
                           <li>
                             <a href="#">A wicked Wand</a>
@@ -214,7 +214,7 @@
                          <!-- accordion-toggle -->
                          <ul class="menu-submenu accordion-content">
                           <li><a class="head" href="#theWisdomOfWizards">The Wisdom of Wizards</a></li>
-                          <li><a class="head" href="#">Disciple of Mind</a></li>
+                          <li><a class="head" href="#discipleOfMind">Disciple of Mind</a></li>
                           <li><a class="head" href="#">A wicked Wand</a></li>
                           <li><a class="head" href="#">Lift Their Spirts</a></li>
                           <li><a class="head" href="#">Disciple of Nature</a></li>
@@ -1440,7 +1440,125 @@
                   </div>
                 </div>
               </div>
-              <!-- End The Art of Combat -->
+              <!-- End The Wisdom of Wizards -->
+
+              <div class="line"></div>
+
+              <!-- Start of Disciple of Mind -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="discipleOfMind" class="anchor text-center">Disciple of mind</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Mind
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Nova
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Mind_Wand_of_Expansion.png" alt="Val Clockworks" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Mind_Wand_of_Expansion_Stats.png' alt='Clockwork Robe Stats'>">
+                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Mind_Clockwork_Cap.png" alt="Val Clockworks" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Mind_Clockwork_Cap_Stats.png' alt='Clockwork Robe Stats'>">
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Krythan/Disciple_of_Mind_Nova.png" alt="Nova">
+                        Speak to <span class="light-red">Nova</span> if you have 15 in Mind Skill he will talk to you. Shhhhh! I know why you are here. Your questions will reveal much about your intentions! 
+                        <br>
+                        Each options has the same reward just differnt monsters to kill for him.
+                        <hr>
+                        <strong class="light-blue">Item</strong>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECIEVED: Wand of Expansion</span></li>
+                        </ul>
+                        <hr>
+                        <strong class="light-blue">Reward</strong>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Clockwork Cap</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">33,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul> 
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Option: 1</strong> I'm not ready to ask... <span class="light-red">Speak to him again</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Option: 2</strong> What do you require of me? <span class="light-red">40 Cultist</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Option: 3</strong> What great secret have you to share with me? <span class="light-red">40 Marsh Lights</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Option: 4</strong> Why are you so grouchy? <span class="light-red">40 Orc Renegades</span></li>
+                        </ul>
+                    </p>
+                    <p>    
+                        <hr> 
+                        <strong class="light-blue">OPTION: 2</strong>
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Learn more about mind magic by hunting 40 cultist with the Wand of Expansion</span>
+                        <p>You seek to know your duty to others. You will never make it as a wizard that way. You answer to none! Follow your own destiny! I shall give you a task that will remind you of the dangers of falling into the power of another's persuasion... I shall give you a wand. Use it to hunt. It shall add to your power...</p>
+                    </p>
+                   <p class="clearfix">  
+                      <img class="npc-img" src="Images/SilvestValley/The_Wrong_Crowd_Cultist_Lair_Map_Location.png" alt="Cultist Location">
+                        Head out to the west of silvest to the Cultist fort. Kill 40 <span class="light-red">cultist</span> while the Wand of Expansion is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Cultists for Nova the Wizard.</span> When you have kill 40 return to Nova to be rewarded. 
+                    </p>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Return to nova in the Silvest Library!</span>
+                    <p>    
+                      <hr> 
+                      <strong class="light-blue">OPTION: 3</strong>
+                      <br>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Learn more about mind magic by hunting 40 Marsh Lights with the Wand of Expansion.</span>
+                      <p>You wish to know things that are not for you to know! You must watch yourself lest you fall on the same path as the fallen Rune Warriors... you shall study the ways of the marsh light; it leads many astray. I shall give you a wand. use it to hunt. It shall add to your power...</p>
+                    </p>
+                    <p class="clearfix">
+                        Head to the north east of Silvest to Kobold Lake to find the marsh lights. Kill 40 <span class="light-red">marsh lights</span> while the Wand of Expansion is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Marsh Lights for Nova the Wizard.</span> When you have kill 40 return to Nova to be rewarded. 
+                    </p>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Return to nova in the Silvest Library!</span>
+                    <p>    
+                      <hr> 
+                      <strong class="light-blue">OPTION: 4</strong>
+                      <br>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Learn more about mind magic by hunting 40 Orc Renegades with the Wand of Expansion</span>
+                      <p>Grouchy, you say?? You seek to know the mind of another Commendable. I will IGNORE the insulting nature of your question this time. Study the mind of an enemy of our people. The Orc Renegades. I shall give you a wand. Use it to hung Orc Renegade. The wand shall add to your power...</p>
+                    </p>                    
+                    <br>
+                    <p class="clearfix">                    
+                      Head south of Silvest around the moutain to the east to the cave. Kill 40 <span class="light-red">Orc Renegade</span>  while the Wand of Expansion is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Orc Renegades for Nova the Wizard.</span> When you have kill 40 return to Nova to be rewarded. 
+                    </p>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Return to nova in the Silvest Library!</span>
+                    <p>
+                      <hr>
+                      <p>
+                        You alone must find the answers to your questions. Do not rely on the so-called wisdom of others! Consider these tomes of knowledge stored in Aelfwyn's hold.
+                        They did not save use from the Rune War. While the battle raged above, I pored over them to find an answer to stop the evil... in the end, we still do not know what drove them from our lands.
+                        T'would have been better if I had gone above and risked my life to save the one I loved... And so I continue my studies. I hope to find a way to return her from undeath. But you - you can still choose a different path.
+                        Remember this lesson as you seek the answers to your questions.
+                      </p>
+                      <hr>
+                      Nova the Mind Wizard helped you understand how to expand your knowledge of Mind Magic.
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>    
+                  </div>
+                </div>
+              </div>
+              <!-- End of Disciple of Mind -->
+
 
 
 
