Completed A Wicked Wand Quest

--- a/silvestValley.html
+++ b/silvestValley.html
@@ -1475,8 +1475,8 @@
                             Nova
                           </td>
                           <td>
-                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Mind_Wand_of_Expansion.png" alt="Val Clockworks" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Mind_Wand_of_Expansion_Stats.png' alt='Clockwork Robe Stats'>">
-                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Mind_Clockwork_Cap.png" alt="Val Clockworks" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Mind_Clockwork_Cap_Stats.png' alt='Clockwork Robe Stats'>">
+                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Mind_Wand_of_Expansion.png" alt="Wand of Expansion" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Mind_Wand_of_Expansion_Stats.png' alt='Wand of Expansion Stats'>">
+                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Mind_Clockwork_Cap.png" alt="Clockwork Cap" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Mind_Clockwork_Cap_Stats.png' alt='Clockwork Cap Stats'>">
                           </td>                        
                     </table>
 
@@ -1559,7 +1559,86 @@
               </div>
               <!-- End of Disciple of Mind -->
 
+              <div class="line"></div>
 
+              <!-- Start of A Wicked Wand -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="aWickedWand" class="anchor text-center">A Wicked Wand</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Magic Missile
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Petrim the Peculiar
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Krythan/A_Wicked_Wand_Wicked_Looking_Wand.png" alt="Wicked Looking Wand" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/A_Wicked_Wand_Wicked_Looking_Wand_Stats.png' alt='Wicked Looking Wand Stats'>">
+                            <img class="thumbnail-img" src="Images/Krythan/A_Wicked_Wand_Clockwork_Boots.png" alt="Clockwork Boots" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/A_Wicked_Wand_Clockwork_Boots_Stats.png' alt='Clockwork Boots Stats'>">
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Krythan/A_Wicked_Wand_Petrim_the_Peculiar.png" alt="Petrim the Peculiar">
+                        Speak to <span class="light-red">Petrim the Peculiar</span>. One time I slapped a demon in the face with a fish! Should've used the wand, a yup! <span class="orange">He eagerly pushes a wand towards you</span> 
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECIEVED: Wicked Looking Wand</span></li>
+                        </ul>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> A Wicked Wand</span><span class="orange">, A peculiar man named Petrim gave you a Wicked Looking Wand.</span>
+                        Speak to him again. Well, have you used it yet? It won't bite! If you are confused don't fret we all are. Go back to Val Clockwork to adavance this quest.
+                        <hr>
+                    </p>
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/Krythan/The_Wisdom_of_Wizards_Val_Clockworks.png" alt="Val Clockworks">
+                      You found Petrim, I see. It's a valuable lesson I wanted you to learn. You must be prepared for evil forces to come for you. They sense your magic and seek to devour it. Petrim wasn't... A balron at the gates of Hell twisted his mind into madness.
+                      You must be cautious. Do not run ahead in foolishness, thinking you are as strong as the rest. You're not. now then..hmm...something to do..Ah yes. Why don't you use that nasty little wand on the Thieves that roam these forests. They pickpocketed a valuable item from me.
+                      I'm still mad about it. 
+                    </p>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> A Wicked Wand</span><span class="orange">, Val advised you to use the Wicked Looking Wand to slay 40 Thieves.</span>
+                    <hr>
+                    <p>  
+                        Head out to the west of silvest to the forest. Kill 40 <span class="light-red">Thieves</span> while the Wicked Looking Wand is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Thieves for Val Clockworks!</span> When you have kill 40 return to Nova to be rewarded. 
+                    </p>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> A Wicked Wand</span><span class="orange">, Your mission complete, you must now return to Petrim the Peculiar in Silvest</span>
+                    <p>
+                      Ahh-hee hee hee! You should go to hell!! <span class="orange">He takes his shoes off</span> 
+                      <hr>   
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Clockwork Boots</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">216,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>                   
+                  </p>
+                    <p>
+                      <hr>
+                      You were under the instruction of Petrim the Peculiar, and are not sure if you are wiser for it.
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>    
+                  </div>
+                </div>
+              </div>
+              <!-- End of Disciple of Mind -->
 
 
 
