--- a/silvestValley.html
+++ b/silvestValley.html
@@ -1380,6 +1380,14 @@
                   <div class="card-body">
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
+                          <th>Quest Log</th>
+                        </thead>    
+                        <tr>
+                          <td>Krythan
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
                         <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
@@ -1453,15 +1461,22 @@
                   <div class="card-body">
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
+                          <th>Quest Log</th>
+                        </thead>    
                         <tr>
+                          <td>Krythan
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
                           <th>Difficulty</th>
                           <th>Skills</th>
-                        </thead>    
-                        </tr>
+                      </thead>    
                         <tr>
                           <td>Apprentice</td>
                           <td>Mind
-                          </td>                        
+                          </td>
+                        </tr>                          
                     </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
@@ -1570,11 +1585,17 @@
                   <div class="card-body">
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
+                          <th>Quest Log</th>
+                        </thead>    
                         <tr>
+                          <td>Krythan
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
-                        </tr>
                         <tr>
                           <td>Apprentice</td>
                           <td>Magic Missile
