--- a/silvestValley.html
+++ b/silvestValley.html
@@ -1497,8 +1497,10 @@
 
                     <hr>
                     <p class="clearfix">
+                      <span class="light-blue">Need to be level 15 in Mind skill to start this quest.</span>
+                      <br>
                         <img class="npc-img" src="Images/Krythan/Disciple_of_Mind_Nova.png" alt="Nova">
-                        Speak to <span class="light-red">Nova</span> if you have 15 in Mind Skill he will talk to you. Shhhhh! I know why you are here. Your questions will reveal much about your intentions! 
+                        Speak to <span class="light-red">Nova</span> Shhhhh! I know why you are here. Your questions will reveal much about your intentions! 
                         <br>
                         Each options has the same reward just differnt monsters to kill for him.
                         <hr>
@@ -1528,7 +1530,7 @@
                         <p>You seek to know your duty to others. You will never make it as a wizard that way. You answer to none! Follow your own destiny! I shall give you a task that will remind you of the dangers of falling into the power of another's persuasion... I shall give you a wand. Use it to hunt. It shall add to your power...</p>
                     </p>
                    <p class="clearfix">  
-                      <img class="npc-img" src="Images/SilvestValley/The_Wrong_Crowd_Cultist_Lair_Map_Location.png" alt="Cultist Location">
+                      <img class="npc-img" src="Images//NPC/Monsters/Cultist.png" alt="Cultist">
                         Head out to the west of silvest to the Cultist fort. Kill 40 <span class="light-red">cultist</span> while the Wand of Expansion is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Cultists for Nova the Wizard.</span> When you have kill 40 return to Nova to be rewarded. 
                     </p>
                     <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Return to nova in the Silvest Library!</span>
@@ -1540,6 +1542,7 @@
                       <p>You wish to know things that are not for you to know! You must watch yourself lest you fall on the same path as the fallen Rune Warriors... you shall study the ways of the marsh light; it leads many astray. I shall give you a wand. use it to hunt. It shall add to your power...</p>
                     </p>
                     <p class="clearfix">
+                      <img class="npc-img" src="Images/Valinor/Monsters/Marsh_Light.png" alt="Marsh Light">
                         Head to the north east of Silvest to Kobold Lake to find the marsh lights. Kill 40 <span class="light-red">marsh lights</span> while the Wand of Expansion is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Marsh Lights for Nova the Wizard.</span> When you have kill 40 return to Nova to be rewarded. 
                     </p>
                     <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Return to nova in the Silvest Library!</span>
@@ -1551,7 +1554,8 @@
                       <p>Grouchy, you say?? You seek to know the mind of another Commendable. I will IGNORE the insulting nature of your question this time. Study the mind of an enemy of our people. The Orc Renegades. I shall give you a wand. Use it to hung Orc Renegade. The wand shall add to your power...</p>
                     </p>                    
                     <br>
-                    <p class="clearfix">                    
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/Valinor/Monsters/Orc_Renegade.png" alt="Orc Renegade">                    
                       Head south of Silvest around the moutain to the east to the cave. Kill 40 <span class="light-red">Orc Renegade</span>  while the Wand of Expansion is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Orc Renegades for Nova the Wizard.</span> When you have kill 40 return to Nova to be rewarded. 
                     </p>
                     <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Mind</span><span class="orange">, Return to nova in the Silvest Library!</span>
@@ -1637,7 +1641,8 @@
                     </p>
                     <span class="green">QUEST UPDATE:</span><span class="red"> A Wicked Wand</span><span class="orange">, Val advised you to use the Wicked Looking Wand to slay 40 Thieves.</span>
                     <hr>
-                    <p>  
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/npc/Monsters/Thief.png" alt="Thief">  
                         Head out to the west of silvest to the forest. Kill 40 <span class="light-red">Thieves</span> while the Wicked Looking Wand is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Thieves for Val Clockworks!</span> When you have kill 40 return to Nova to be rewarded. 
                     </p>
                     <span class="green">QUEST UPDATE:</span><span class="red"> A Wicked Wand</span><span class="orange">, Your mission complete, you must now return to Petrim the Peculiar in Silvest</span>
@@ -1661,8 +1666,193 @@
               </div>
               <!-- End of A Wicked Wand -->
 
+              <div class="line"></div>
 
+              <!-- Start of Lift Their Spirts -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="liftTheirSpirts" class="anchor text-center">Lift Their Spirts</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                          <th>Quest Log</th>
+                        </thead>    
+                        <tr>
+                          <td>Krythan
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Magic Missile
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Maylee Runesong
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Krythan/Lift_Their_Spirts_Staff_of_Songs.png" alt="Staff of Songs" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Lift_Their_Spirts_Staff_of_Songs_Stats.png' alt='Staff of Songs Stats'>">
+                            <img class="thumbnail-img" src="Images/Krythan/Lift_Their_Spirts_Clockwork_Belt.png" alt="Clockwork Boots" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Lift_Their_Spirts_Clockwork_Belt_Stats.png' alt='Clockwork Belt Stats'>">
+                          </td>                        
+                    </table>
 
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/Krythan/Lift_Their_Spirts_Maylee_Runesong.png" alt="Maylee Runesong">
+                        Speak to <span class="light-red">Maylee Runesong</span>. Hello love! You come to Maylee for a song, or staves? Chose either and you will get the same outcome. Ah there's a good song I know about a stave... <span class="orange">She bursts out in song.</span> My master once gave me a red handled stave... 
+                         He said t'look fast on t'hill and in glave... For if the fine locks o'er Silvest do look, The rocks to the foundations tw'all be shook! Nothing like a good song to get your spirits high! The miners need a boost to their spirits; take this stave and use it to clear out their mine, eh?
+                        <hr>
+                         <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECIEVED: Staff of Songs</span></li>
+                        </ul>
+                        <hr>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Lift Their Spirts</span><span class="orange">, Lift the miner's spirits; banish 40 skeleton Warriors with Maylee Runesong's of Staves.</span>
+                       
+                    </p>
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/NPC/Monsters/Skeleton_Warrior.png" alt="Skeleton Warrior">
+                      Go north in to the cave and banish the Skeleton Warriors. Kill 40 <span class="light-red">Skeleton Warriors</span> while the Staff of Songs is equipped. you will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Skeleton Warriors for Maylee Runesong!</span> When you have killed 40 return to Maylee Runesong to be rewarded. 
+                    </p>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Lift Their Spirts</span><span class="orange">, The undead have been banished from the mines. Return to Maylee Runesong in Cliffside!.</span>
+                    <p>  
+                      Lovely! You are back in one piece, I see. Here, a nice belt. Tuck a few runes into it! Never know when you'll need a spare!
+                      <hr>   
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Clockwork Belt</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">22,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>
+                      You became wiser under the instruction of Maylee Runesong.
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>    
+                  </div>
+                </div>
+              </div>
+              <!-- End of Lift Their Spirts -->
+              <div class="line"></div>
+              <!-- Start of Disciple of Nature -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="discipleOfNature" class="anchor text-center">Disciple Of Nature</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                          <th>Quest Log</th>
+                        </thead>    
+                        <tr>
+                          <td>Krythan
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Nature
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Culls McGilla
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Nature_Sprouted_Wand.png" alt="Sprouted Wand" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Nature_Sprouted_Wand_Stats.png' alt='Sprouted Wand Stats'>">
+                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Nature_Clockwork_Gloves.png" alt="Clockwork Gloves" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Nature_Clockwork_Gloves_Stats.png' alt='Clockwork Gloves Stats'>">
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                      <span class="light-blue">Need to be level 15 in nature skill to start this quest.</span>
+                      <br>
+                        <img class="npc-img" src="Images/Krythan/Disciple_of_Nature_Culls_Mcgilla.png" alt="Culls McGilla">
+                        Speak to <span class="light-red">Culls McGilla</span>. Greetings, young wizard! What brings you to Cliffside? It's not often we receive visitors... Are you? That is splendid! I remember when I was young in years, eager to learn more of the magic of Nature... I hung from every word of the priests of Veldan. I had many, many questions. Perhaps too many, for they sent me away...
+                        <hr>
+                         <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 1</span> How did you learn without their guidance? <span class="light-red">Advances the quest</span></li> 
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 2</span> Why are they so rude?</li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 3</span> What did you do next?</li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 4</span> What did you ask them? <span class="light-red">Advances the quest</span></li> 
+                        </ul>
+                        <hr>
+                    </p>
+                    <p>
+                      <span class="light-blue">OPTION: 1</span>
+                      <br>
+                      Just as you will when you move on to other adventures. Watch, and learn. Be patient. The world around us is bursting with answers - if you only look! Speaking of these things brings back such memories! Ah, but I am old... you must have some adventures of your own!
+                      Take this wand - practice the Flamestrike spell with it. I shall reward your hard work!
+                    </p>   
+                    <p>
+                      <span class="light-blue">OPTION: 2</span>
+                      <br>
+                      Ah, do not be so quick to judge the good priests!
+                    </p>  
+                    <p>
+                      <span class="light-blue">OPTION: 3</span>
+                      <br>
+                      I sulked about town for a few weeks, then got bored. I tanned a ew skins. Skinned a few hides. Hid a few skins of wine in new hides. Got bored of that. Drank under the stars with the firefly swarms... I wandered about Krythan many, many years. Cliffside is now my home.
+                    <p>
+                      <span class="light-blue">OPTION: 4</span>
+                      <br>
+                      What did I ask? Well how could I remember that? It was the sheer quantity of questions! More than blades of grass if you could count them. Speaking of these things brings back such memories! Ah, but I am old... you must have some adventures of your own! Take this wand - practice the Flamestrike spell with it. I shall reward your hard work!
+                    </p>                          
+                      <hr>  
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECIEVED: Sprouted Wand</span></li>
+                      </ul>
+                      <hr>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Nature</span><span class="orange">, Gain experience in Nature magic. Cast Flamestrike 100 times for Culls McGilla of Cliffside.</span>
+                       
+                    </p>
+                    <p class="clearfix">
+                      <img class="npc-img" src="Images/.png" alt="Flamestrike">
+                      Go out and cast <span class="light-red">Flamestrike</span> 100 times. <span class="green">QUEST UPDATE: You have cast Flamestrike 100 times!</span> When you have completed your task return to Culls McGilla. 
+                    </p>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Disciple of Nature</span><span class="orange">, Return to Culls McGilla of Cliffside for your reward.</span>
+                    <p>  
+                      Very, very good. The rocks cry out your name, o wise wizard! I've no doubt you will find the answers to your questions, in time.
+                      <hr>   
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Clockwork Gloves</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">22,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>
+                      You become wiser under the instruction of the Wizard McGilla.
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>    
+                  </div>
+                </div>
+              </div>
+              <!-- End of Lift Their Spirts -->
 
               <footer class="jumbotron text-center">
               <a href="https://keithheffington.com" target="_blank"><p>Designed by Keith Heffington</p></a>
