--- a/silvestValley.html
+++ b/silvestValley.html
@@ -330,7 +330,7 @@
                     <img class="npc-img" src="Images/Krythan/The_Wisdom_of_Wizards_Val_Clockworks.png" alt="Val Clockworks">  
                   </div>
                   <div>
-                    <p><a href="#siscipleOfMind"><span class="num-color-red">2.</span> Nova</a></p>
+                    <p><a href="#discipleOfMind"><span class="num-color-red">2.</span> Nova</a></p>
                     <img class="npc-img" src="Images/Krythan/Disciple_of_Mind_Nova.png" alt="Nova">  
                   </div>
                   <div>
