Added body mage quest

--- a/silvestValley.html
+++ b/silvestValley.html
@@ -1852,7 +1852,126 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Lift Their Spirts -->
+              <!-- End of Disciple of Nature -->
+
+              <div class="line"></div>
+              <!-- Start of Disciple of Body -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="discipleOfBody" class="anchor text-center">Disciple Of Body</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                          <th>Quest Log</th>
+                        </thead>    
+                        <tr>
+                          <td>Krythan
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Nature
+                          </td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Treba of Avaril
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Body_Ivory_Wand.png" alt="Ivory Wand" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Body_Ivory_Wand_Stats.png' alt='Ivory Wand Stats'>">
+                            <img class="thumbnail-img" src="Images/Krythan/Disciple_of_Body_Clockwork_Pants.png" alt="Clockwork Pants" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Krythan/Disciple_of_Body_Clockwork_Pants_Stats.png' alt='Clockwork Pants Stats'>">
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                      <span class="light-blue">Need to be level 15 in Body skill to start this quest.</span>
+                      <br>
+                        <img class="npc-img" src="Images/Krythan/Disciple_of_Body_Treba_Of_Avaril.png" alt="Treba of Avaril">
+                        Speak to <span class="light-red">Treba of Avaril</span>. And who do we have here? A bit flimsy though! Say no more. val must have sent you to me. none others would approach so fierce a figure! You wish to advance in Body magic... What do you wish to know? 
+                        <hr>
+                         <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 1</span> Whatever you want to tell me, O great one! <span class="light-red">40 Wargs</span></li> 
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 2</span> I wish to know more about healing. <span class="light-red">40 Skeletons</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 light-blue">OPTION: 3</span> I wish to defend myself. <span class="light-red">40 Small Grizzly Bears</span></li>
+                        </ul>
+                        <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECIEVED: Ivory Wand</span></li>
+                      </ul>
+                      <hr>
+                    </p>
+                    <p class="clearfix">
+                      <span class="light-blue">OPTION: 1</span>
+                      <br>
+                      <img class="npc-img" src="Images/NPC/Monsters/Warg.png" alt="Warg">
+                      Do stop truckling about. Only a great fool would spout such nonsense! You waste my time! Therefore, you shall fight an abomination alike your request... The warg. Use this wand to practice your spellcasting. Hunt a good number of wargs. Study their ways, and become wise!
+                      <br>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Body</span><span class="orange">, Hunt 40 Warg with the Ivory Wand given to you by the witch Treba near varg..</span>
+                      <br>
+                      Go out and Kill 40 <span class="light-red">Wargs</span> while the Ivory Wand is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Wargs for Treba of Avaril!</span> When you have killed 40 return to Treba of Avaril to be rewarded. 
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Disciple of Body</span><span class="orange">, Return to Treba of Avaril</span>
+                      <hr>
+                    </p> 
+                    <p class="clearfix">
+                      <span class="light-blue">OPTION: 2</span>
+                      <br>
+                      <img class="npc-img" src="Images/NPC/Monsters/Skeleton.png" alt="Skeleton">
+                      You must time your healing spells and pay attention to your stamina! Don't be brave. Heal before it's to late... You shall fight the undead; they waited too long to heal... Use this wand to practice your spellcasting. Study their ways, and become wise!
+                      <br>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Body</span><span class="orange">, Hunt 40 Skeletons with the Ivory Wand given to you by the witch Treba near varg..</span>
+                      <br>
+                      Go out and Kill 40 <span class="light-red">Skeletons</span> while the Ivory Wand is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Skeletons for Treba of Avaril!</span> When you have killed 40 return to Treba of Avaril to be rewarded. 
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Disciple of Body</span><span class="orange">, Return to Treba of Avaril</span>
+                      <hr>
+                    </p>  
+                    <p class="clearfix">
+                      <span class="light-blue">OPTION: 3</span>
+                      <br>
+                      <img class="npc-img" src="Images/NPC/Monsters/Small_Grizzly_Bear.png" alt="Small Grizzly Bear">
+                      A trick question! You should always cast spells that will protect you. But a good offense is just as good as a well prepared defense. Always use whatever is available to you - and do not neglect to refresh them. You shallfight grizzly bears; a resourceful, strong, fierce creature! Use this wand to practice your spellcasting. Hunt a good number of Small Grizzly Bears. Study their ways, and become wise!
+                      <br>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Disciple of Body</span><span class="orange">, Hunt 40 Small Grizzly Bears with the Ivory Wand given to you by the witch Treba near varg..</span>
+                      <br>
+                      Go out and Kill 40 <span class="light-red">Small Grizzly Bears</span> while the Ivory Wand is equipped. You will be updated as you kill them <span class="green">QUEST UPDATE: you have killed 40 Small Grizzly Bears for Treba of Avaril!</span> When you have killed 40 return to Treba of Avaril to be rewarded. 
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Disciple of Body</span><span class="orange">, Return to Treba of Avaril</span>
+                      <hr>
+                    </p> 
+                    <p>  
+                      Monte did not think you would return. Always a pessimist these days! Please take this armor - and remember our lesson!
+                      <hr>   
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Clockwork Pants</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">33,000</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>
+                      You become wiser under the instruction of Treba of Avaril.
+                    </p>
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>    
+                  </div>
+                </div>
+              </div>
+              <!-- End of Disciple of Nature -->
+
 
               <footer class="jumbotron text-center">
               <a href="https://keithheffington.com" target="_blank"><p>Designed by Keith Heffington</p></a>
