--- a/darkWoods.html
+++ b/darkWoods.html
@@ -355,6 +355,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -403,7 +414,7 @@
                         
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained the dexterity of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained the dexterity of Whisperdale</span></li>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 500 faction with the city of Whisperdale!</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2,750</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>
@@ -463,6 +474,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -533,6 +555,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -597,6 +630,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Hunting lodge</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -693,6 +737,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -756,6 +811,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -832,6 +898,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -904,6 +981,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Autumn</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -969,6 +1057,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1040,6 +1139,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Autumn</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1095,6 +1205,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Autumn</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1172,6 +1293,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Cave Northeast of Autumn</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1282,6 +1414,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Hunting Lodge</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1364,6 +1507,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1430,6 +1584,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1503,6 +1668,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Vezryl's Estate</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1571,6 +1747,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Autumn</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
@@ -1646,6 +1833,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Whisperdale</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1718,6 +1916,17 @@
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Autumn</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
                           <th>Difficulty</th>
                           <th>Skills</th>
                         </thead>    
@@ -1787,6 +1996,17 @@
                 </div>
                 <div>
                   <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Darkwoods</td>
+                          <td>Vezryl's Estate</td>                        
+                    </table>
                     <table class="table table-sm table-bordered text-center">
                       <thead class="thead-light">
                         <tr>
